# MQTT-Home-Server-MCP

./: .gitignore  README.md  env.test  main.py  pyproject.toml  start_mcp.py  start_server.py
.cursor/: mcp.json
app/: server.py
app/crud/: rest.py
app/crud/dao/: actuator.py  device.py  sensor.py
app/crud/event/: listener.py  publisher.py
app/model/: actuator.py  device.py  enums.py  sensor.py
app/router/: actuator.py  device.py  sensor.py  template.py
app/schema/: base.py  mqtt.py  rest.py
app/templates/: base.html  device.html  index.html
app/templates/components/: actuator_card.html  device_card.html  edit_modal.html  sensor_card.html
app/templates/static/css/: actuator.css  base.css  device.css  sensor.css
app/templates/static/js/: actuator_card.js  app.js  device_card.js  sensor_card.js
app/util/: broker.py  database.py  logging.py
arduino/smart-home-mqtt/: platformio.ini
arduino/smart-home-mqtt/lib/SmartHome/: SmartHome.cpp  SmartHome.h
arduino/smart-home-mqtt/src/: main.cpp
documents/: API_DOCUMENTATION.md  ARDUINO_CLIENT_SETUP.md  BACKEND_SERVER_SETUP.md  MCP_SERVER_SETUP.md
shmcp/: schema.py  server.py  tool.py
shmcp/util/: client.py
static/: index.html
static/css/: style.css
static/js/: app.js
